[package]
name = "rust-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
rsa = "0.9.6"
base64 = "0.21.5"
dotenv = "0.15.0"
